<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_crear_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    style="@style/Base.Theme.UT2_App"
    >

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iniciar_sesion"
        android:text="@string/crear_cuenta"
        style="@style/TituloPrincipal"
        android:layout_marginBottom="25dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_email"
        android:hint="@string/email"
        style="@style/EstiloEditText"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_pwd"
        android:hint="@string/password"
        style="@style/EstiloEditTextPwd"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_usuario"
        android:hint="@string/nombre_de_usuario"
        style="@style/EstiloEditText"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/altura_usuario"
        android:hint="@string/altura_en_cm"
        style="@style/EstiloEditText"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/peso"
        android:hint="@string/peso_kg"
        style="@style/EstiloEditText"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_crear_cuenta"
        android:text="@string/crear_cuenta"
        style="@style/EstiloBoton"
        />
</LinearLayout>