<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/textViewSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serie_1"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editTextRepeticiones"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/repeticiones"
        android:inputType="number"/>
</LinearLayout>
