<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewNombreEjercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejercicio"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextNumSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_series"
            android:inputType="number"/>

        <Button
            android:id="@+id/btnEstablecerSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/establecer_series"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/linearLayoutSeries"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnGuardarSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_series"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
