<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    style="@style/Base.Theme.UT2_App">

    <ImageView
        android:layout_width="275dp"
        android:layout_height="183dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_gym_transparent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iniciar_sesion"
        android:text="@string/iniciar_sesion"
        style="@style/TituloPrincipal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_email"
        android:hint="@string/email"
        style="@style/EstiloEditText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_pwd"
        android:hint="@string/password"
        style="@style/EstiloEditTextPwd"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_iniciar_sesion"
        android:text="@string/iniciar_sesion"
        style="@style/EstiloBoton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_crear_cuenta"
        android:text="@string/crear_cuenta"
        style="@style/EstiloBoton"
        />
</LinearLayout>