<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Titulo Principal !-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/configuraci_n"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">


    <!-- Cambiar nombre !-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_nombre"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_weight="1"
                android:hint="@string/escriba_aqu"
                android:textSize="15sp"/>
        </LinearLayout>

        <!-- Cambiar Tema !-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tema"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp">

                <LinearLayout
                    android:id="@+id/fondoSwitch"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/switch_background"
                    android:padding="4dp"
                    android:elevation="4dp"
                    android:layout_marginStart="88dp"
                    android:gravity="center_vertical">

                    <View
                        android:id="@+id/bolaSwitch"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bola_background"/>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiar_foto"
                    android:layout_marginTop="37dp"
                    android:textStyle="bold"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/place_holder"
                    >

                </ImageView>

            </LinearLayout>




    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/confirmar"
        android:backgroundTint="@color/black">
    </Button>

    <Button
        android:id="@+id/btn_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/cerrar_sesion"
        android:backgroundTint="@color/black">
    </Button>






</LinearLayout>



